--- a/IndividualTask/App.config
+++ b/IndividualTask/App.config
@@ -7,6 +7,11 @@
           requirePermission="false"/>
     </configSections>
   
+    <connectionStrings>
+        <add name="IndividualTask.Properties.Settings.MainFormConnectionString"
+            connectionString="Data Source=SVYATKO228;Initial Catalog=MainForm;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
